[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

serde_json = "1.0.88"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tonic_openssl_lnd = "0.2.0"
